added adding for gh-pages deploy

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://annaostapenko22.github.io/STAR-DB/",
+  "homepage": "https://annaostapenko22.github.io/STAR-DB/.",
   "eslintConfig": {
     "extends": "react-app"
   },
