--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "short-id": "0.1.0-1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "homepage": "https://annaostapenko22.github.io/STAR-DB/.",
+  "homepage": "https://annaostapenko22.github.io/STAR-DB",
   "eslintConfig": {
     "extends": "react-app"
   },
